Adding ability and change a mirror file ?

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.jedk1</groupId>
@@ -11,7 +11,7 @@
   <repositories>
     <repository>
       <id>spigot-repo</id>
-      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+      <url>https://hub.spigotmc.org/nexus/content/repositories/public/</url>
     </repository>
   </repositories>
 
@@ -26,16 +26,25 @@
     <!-- Bukkit API -->
     <dependency>
       <groupId>org.bukkit</groupId>
-      <artifactId>craftbukkit</artifactId>
-      <version>1.12.1-R0.1-SNAPSHOT</version>
+      <artifactId>bukkit</artifactId>
+      <version>1.12.2-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <!-- ProjectKorra -->
     <dependency>
       <groupId>com.projectkorra</groupId>
       <artifactId>projectkorra</artifactId>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/ProjectKorra-1.8.7.jar</systemPath>
       <version>1.8.7</version>
-      <scope>provided</scope>
+    </dependency>
+    <!-- ProjectKorra -->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/netty-all-4.1.29.Final.jar</systemPath>
+      <version>4.1.29.Final</version>
     </dependency>
   </dependencies>
 
