--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
       <systemPath>${project.basedir}/libs/netty-all-4.1.29.Final.jar</systemPath>
       <version>4.1.29.Final</version>
     </dependency>
+    <dependency>
+      <groupId>org.bukkit.craftbukkit</groupId>
+      <artifactId>spigot</artifactId>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/spigot-1.12.2.jar</systemPath>
+      <version>1.12.2</version>
+    </dependency>
   </dependencies>
 
   <build>
